# pers

./: --no-server  -l  .gitignore  BUILD_ENV.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  SETUP.md  json_test_results.md  rust-toolchain.toml  test_results.json  test_results_table.md  vcpkg-configuration.json  vcpkg.json
pers/: CMakeLists.txt
pers/include/pers/core/: Application.h  CoreDefs.h  IWindow.h  IWindowFactory.h
pers/include/pers/core/platform/: NativeHandle.h  NativeWindowHandle.h
pers/include/pers/graphics/: GraphicsEnumStrings.h  GraphicsFormats.h  GraphicsTypes.h  IBindGroup.h  IBuffer.h  ICommandBuffer.h  ICommandEncoder.h  IFramebuffer.h  IInstance.h  ILogicalDevice.h  IPhysicalDevice.h  IPipeline.h  IQueue.h  IRenderPassEncoder.h  IRenderPipeline.h  IResourceFactory.h  IShaderModule.h  ISurfaceFramebuffer.h  ISwapChain.h  ITexture.h  ITextureView.h  OffscreenFramebuffer.h  RenderPassConfig.h  RenderPassTypes.h  SurfaceFramebuffer.h  SwapChainDescBuilder.h  SwapChainTypes.h  core.h  webgpu.h
pers/include/pers/graphics/backends/: IGraphicsBackendFactory.h  IGraphicsInstanceFactory.h
pers/include/pers/graphics/buffers/: BufferFactory.h  BufferTypes.h  DeferredStagingBuffer.h  DeviceBuffer.h  DeviceBufferUsage.h  DynamicBuffer.h  IBuffer.h  IBufferFactory.h  IMappableBuffer.h  INativeBuffer.h  INativeMappableBuffer.h  ImmediateDeviceBuffer.h  ImmediateStagingBuffer.h  MappedData.h
pers/include/pers/utils/: Logger.h  Mutex.h  NotImplemented.h  SourceLocation.h  TodoOrDie.h  TodoSomeday.h
pers/src/core/: Application.cpp
pers/src/graphics/: GraphicsEnumStrings.cpp  OffscreenFramebuffer.cpp  RenderPassConfig.cpp  SurfaceFramebuffer.cpp  SwapChainDescBuilder.cpp  core.cpp  webgpu.cpp
pers/src/graphics/backends/webgpu/: WebGPUBackendFactory.cpp  WebGPUBuffer.cpp  WebGPUCommandBuffer.cpp  WebGPUCommandEncoder.cpp  WebGPUConverters.cpp  WebGPUDepthOnlyFramebuffer.cpp  WebGPUFramebufferFactory.cpp  WebGPUInstance.cpp  WebGPUInstance.h  WebGPUInstanceFactory.cpp  WebGPUInstance_macOS.mm  WebGPULogicalDevice.cpp  WebGPUOffscreenFramebuffer.cpp  WebGPUPhysicalDevice.cpp  WebGPUPhysicalDevice.h  WebGPUQueue.cpp  WebGPURenderPassEncoder.cpp  WebGPURenderPipeline.cpp  WebGPUResourceFactory.cpp  WebGPUShaderModule.cpp  WebGPUSurfaceFramebuffer.cpp  WebGPUSwapChain.cpp  WebGPUTexture.cpp  WebGPUTextureView.cpp
pers/src/graphics/buffers/: BufferFactory.cpp  BufferTypes.cpp  DeferredStagingBuffer.cpp  DeviceBuffer.cpp  DynamicBuffer.cpp  ImmediateDeviceBuffer.cpp  ImmediateStagingBuffer.cpp  MappedData.cpp
pers/src/utils/: Logger.cpp  Mutex.cpp  NotImplemented.cpp  TodoOrDie.cpp  TodoSomeday.cpp
tests/pers/: CMakeLists.txt  test_shared.cpp  test_static.cpp  test_webgpu.cpp
tests/pers/bufferwrite/: BufferWriteRenderer.cpp  BufferWriteRenderer.h  CMakeLists.txt  GLFWWindow.cpp  GLFWWindowFactory.cpp  PersBufferWriteApp.cpp  PersBufferWriteApp.h  ResourceLoader.cpp  ResourceLoader.h  main.cpp
tests/pers/lib_link_test/: test_shared.cpp  test_static.cpp  test_webgpu.cpp
tests/pers/triangle/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  GLFWWindowFactory.h  PersTriangleApp.cpp  PersTriangleApp.h  PersTriangleApp_old.cpp  TriangleRenderer.cpp  TriangleRenderer.h  TriangleRenderer_macOS.mm  copy_runtime_dep.cmake  main.cpp  main_wgpu.cpp  test_lifecycle.cpp
tests/pers/triangle/shaders/: triangle.wgsl
tests/pers/unit_tests/: CMakeLists.txt  JSON_TEST_FRAMEWORK_GUIDE.md  TEST_ADDITION_MANUAL.md  adapter_request_handler.cpp  adapter_request_handler.h  buffer_creation_handler.cpp  buffer_creation_handler.h  command_encoder_handler.cpp  command_encoder_handler.h  device_creation_handler.cpp  device_creation_handler.h  generate_test_cases.py  json_test_executor.cpp  json_test_executor.h  json_test_loader.cpp  json_test_loader.h  json_test_loader_rapidjson.cpp  json_test_loader_rapidjson.cpp.backup  json_test_loader_rapidjson.h  json_test_main.cpp  main.cpp  queue_creation_handler.cpp  queue_creation_handler.h  queue_operations_handler.cpp  queue_operations_handler.h  shader_handler.cpp  shader_handler.h  test_cases.json  test_cases_2025_01_02.json  test_cases_500.json  test_cases_500_2025_01_02.json  test_cases_comprehensive.json  test_cases_table.md  test_critical_path.cpp  test_error_handling.cpp  test_framework.h  test_handler_base.h  test_handlers.cpp  test_handlers.h  test_memory_safety.cpp  (+9 more)
tests/pers/unit_tests/docs/: README.md  TEST_RESULT_DISPLAY.md  requirements.md
tests/pers/unit_tests/docs/api/: result-writer.md  test-runner.md
tests/pers/unit_tests/docs/design/: architecture.md  log-capture.md  test-framework.md
tests/pers/unit_tests/docs/unit_test_guide/: 01_TEST_CASE_JSON_WRITING_GUIDE.md  02_HANDLER_CLASS_IMPLEMENTATION_GUIDE.md  03_CPP_INTERFACE_REQUIREMENTS.md  04_UNIT_TEST_PROGRAM_OPERATION.md  05_OUTPUT_FORMAT_FOR_WEBVIEW.md  06_JSON_SCHEMA_DOCUMENTATION.md  README.md
tests/pers/unit_tests/docs/web/: backend.md  frontend.md
tests/pers/unit_tests/handlers/: buffer_creation_handler.cpp  device_creation_handler.cpp  device_creation_handler.h  instance_creation_handler.cpp  instance_creation_handler.h  request_adapter_handler.cpp  request_adapter_handler.h  shader_compilation_handler.cpp  swapchain_builder_handler.cpp  swapchain_builder_handler.h  texture_creation_handler.cpp
tests/pers/unit_tests/handlers/buffer/: buffer_data_verification_handler.cpp  buffer_data_verification_handler.h  webgpu_buffer_handler.cpp  webgpu_buffer_handler.h
tests/pers/unit_tests/test_cases/set_01/: adapter_tests.json  buffer_tests.json  device_tests.json  instance_tests.json  pipeline_tests.json  shader_tests.json  test_cases.json  test_cases_500.json  texture_tests.json
tests/pers/unit_tests/test_cases/set_02/: adapter_tests.json  config.json  (+3 more)
tests/pers/unit_tests/test_cases/set_02 - Copy/: swapchain_builder_tests.json
tests/pers/unit_tests/web/: kill_server.bat  package-lock.json  package.json  run_server.bat  server.js  start-server.bat  stop-server.bat
tests/pers/webgpu_instance_test/: CMakeLists.txt  main.cpp
(+186 files in other folders)
